force-app/main/default/objects/SmokeTestConfig__mdt/SmokeTestConfig__mdt.object-meta.xml
<CustomObject>
    <description>Global configuration for the Salesforce Post-Deployment Smoke Testing system. Deployable via Metadata API (CI/CD compatible). Available in Apex test context without SeeAllData. Accessed via SmokeTestConfig__mdt.getAll() with no SOQL query count impact.</description>
    <label>Smoke Test Configuration</label>
    <pluralLabel>Smoke Test Configurations</pluralLabel>
</CustomObject>