force-app/main/default/objects/SmokeTestConfig__mdt/fields/AutoTriggerEnabled__c.field-meta.xml
<CustomField>
    <fullName>AutoTriggerEnabled__c</fullName>
    <description>When true, the DeploymentComplete__e platform event trigger automatically starts a new smoke test suite on each deployment. When false, smoke tests must be triggered manually via the REST API or UI. Default: true.</description>
    <label>Auto-Trigger on Deployment</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>