force-app/main/default/objects/SmokeTestConfig__mdt/fields/BackpressureQueueDepthPct__c.field-meta.xml
<CustomField>
    <fullName>BackpressureQueueDepthPct__c</fullName>
    <description>Percentage of the Salesforce async flex queue capacity (max 100) at which the API begins returning 429 Retry-After to apply backpressure. Default: 80 (triggers at 80/100 queue slots used).</description>
    <label>Backpressure Queue Depth (%)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>