force-app/main/default/objects/SmokeTestConfig__mdt/fields/CircuitBreakerThreshold__c.field-meta.xml
<CustomField>
    <fullName>CircuitBreakerThreshold__c</fullName>
    <description>Number of consecutive governor-limit failures that trigger the circuit breaker, pausing execution for the remainder of the suite. Default: 3.</description>
    <label>Circuit Breaker Threshold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>