force-app/main/default/objects/SmokeTestConfig__mdt/fields/DataRetentionDaysAuditLogs__c.field-meta.xml
<CustomField>
    <fullName>DataRetentionDaysAuditLogs__c</fullName>
    <description>Number of days to retain SmokeTestAuditLog__c records. Minimum 365 days required per SOC 2 and ISO 27001 compliance requirements. Default: 365 days.</description>
    <label>Data Retention - Audit Logs (days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>