force-app/main/default/objects/SmokeTestConfig__mdt/fields/DataRetentionDaysConfidential__c.field-meta.xml
<CustomField>
    <fullName>DataRetentionDaysConfidential__c</fullName>
    <description>Retention period in days for Confidential-classification records (SmokeTestAuditLog__c, SmokeTestSecurityScore__c). Default: 365 (1 year minimum per compliance policy).</description>
    <label>Data Retention — Confidential (days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>