force-app/main/default/objects/SmokeTestConfig__mdt/fields/DataRetentionDaysInternal__c.field-meta.xml
<CustomField>
    <fullName>DataRetentionDaysInternal__c</fullName>
    <description>Retention period in days for Internal-classification records (SmokeTestExecution__c, SmokeTestResult__c). Scheduled batch deletes records older than this value. Default: 90.</description>
    <label>Data Retention — Internal (days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>