force-app/main/default/objects/SmokeTestConfig__mdt/fields/DataRetentionDaysSecurityScores__c.field-meta.xml
<CustomField>
    <fullName>DataRetentionDaysSecurityScores__c</fullName>
    <description>Number of days to retain SmokeTestSecurityScore__c records before archival or deletion. Default: 365 days.</description>
    <label>Data Retention - Security Scores (days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>