force-app/main/default/objects/SmokeTestConfig__mdt/fields/DefaultRollbackPolicy__c.field-meta.xml
<CustomField>
    <fullName>DefaultRollbackPolicy__c</fullName>
    <description>Default rollback policy applied to all executions unless overridden at runtime. Valid values: Recommend Only, Auto-Rollback, Manual Approval. Default: Recommend Only.</description>
    <label>Default Rollback Policy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>