force-app/main/default/objects/SmokeTestConfig__mdt/fields/DryRunMode__c.field-meta.xml
<CustomField>
    <fullName>DryRunMode__c</fullName>
    <description>When true, the rollback recommendation is computed but no rollback action is taken regardless of the DefaultRollbackPolicy setting. Useful for validating rollback logic before enabling in production. Default: false.</description>
    <label>Dry-Run Mode</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>