force-app/main/default/objects/SmokeTestConfig__mdt/fields/EnableWebhookCallbacks__c.field-meta.xml
<CustomField>
    <fullName>EnableWebhookCallbacks__c</fullName>
    <description>Master switch for webhook callback delivery. When false, the orchestrator skips all HTTP callouts to WebhookCallbackUrl__c even if a URL is registered. Default: true.</description>
    <label>Enable Webhook Callbacks</label>
    <type>Checkbox</type>
</CustomField>