force-app/main/default/objects/SmokeTestConfig__mdt/fields/GovernorBudgetCPUMs__c.field-meta.xml
<CustomField>
    <fullName>GovernorBudgetCPUMs__c</fullName>
    <description>Maximum Apex CPU time in milliseconds a single scenario may consume within its Queueable context. Default: 5000. Salesforce async limit is 60000ms; this budget provides headroom for the orchestrator itself.</description>
    <label>Governor Budget — CPU (ms)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>