force-app/main/default/objects/SmokeTestConfig__mdt/fields/GovernorBudgetDML__c.field-meta.xml
<CustomField>
    <fullName>GovernorBudgetDML__c</fullName>
    <description>Maximum DML statements a single scenario may execute within its Queueable context. Default: 50. Salesforce limit is 150; this budget leaves room for the orchestrator to persist results.</description>
    <label>Governor Budget — DML Statements</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>