force-app/main/default/objects/SmokeTestConfig__mdt/fields/GovernorBudgetSOQL__c.field-meta.xml
<CustomField>
    <fullName>GovernorBudgetSOQL__c</fullName>
    <description>Maximum SOQL queries a single scenario may execute within its Queueable context. Default: 50. Salesforce async limit is 200; this budget provides headroom for the orchestrator and result persistence.</description>
    <label>Governor Budget — SOQL Queries</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>