force-app/main/default/objects/SmokeTestConfig__mdt/fields/MaxConcurrentExecutions__c.field-meta.xml
<CustomField>
    <fullName>MaxConcurrentExecutions__c</fullName>
    <description>Maximum number of simultaneous smoke test suite executions permitted across the org. Default: 50. The API returns 429 Retry-After when this limit is reached.</description>
    <label>Max Concurrent Executions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>