force-app/main/default/objects/SmokeTestConfig__mdt/fields/MaxExecutionTimeMinutes__c.field-meta.xml
<CustomField>
    <fullName>MaxExecutionTimeMinutes__c</fullName>
    <description>Maximum wall-clock time in minutes for the entire smoke test suite to complete. Default: 5 minutes. The orchestrator aborts remaining scenarios if this limit is exceeded.</description>
    <label>Max Execution Time (minutes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>