force-app/main/default/objects/SmokeTestConfig__mdt/fields/PerScenarioTimeoutSec__c.field-meta.xml
<CustomField>
    <fullName>PerScenarioTimeoutSec__c</fullName>
    <description>Maximum wall-clock time in seconds for a single scenario to execute before it is marked Timeout and the suite continues. Default: 30. Can be overridden per-scenario via SmokeTestScenario__mdt.TimeoutOverrideSec__c.</description>
    <label>Per-Scenario Timeout (seconds)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>