force-app/main/default/objects/SmokeTestConfig__mdt/fields/RollbackConfirmationWindowSec__c.field-meta.xml
<CustomField>
    <fullName>RollbackConfirmationWindowSec__c</fullName>
    <description>Seconds the system waits for operator cancellation before executing an auto-rollback. Default: 60. A value of 0 disables the confirmation window (immediate execution).</description>
    <label>Rollback Confirmation Window (seconds)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>