force-app/main/default/objects/SmokeTestConfig__mdt/fields/SecurityCacheTTL__c.field-meta.xml
<CustomField>
    <fullName>SecurityCacheTTL__c</fullName>
    <description>Cache time-to-live (seconds) for SecurityHealthCheckResult. Cached results are returned without querying the Tooling API until this TTL expires. Default: 60.</description>
    <label>Security Cache TTL (Seconds)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>