force-app/main/default/objects/SmokeTestConfig__mdt/fields/SecurityHealthCheckEnabled__c.field-meta.xml
<CustomField>
    <fullName>SecurityHealthCheckEnabled__c</fullName>
    <description>When true, the security health check comparison runs after each smoke test suite and failures can block the rollback decision. When false, health check is skipped. Default: true.</description>
    <label>Security Health Check Enabled</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>