force-app/main/default/objects/SmokeTestConfig__mdt/fields/SecurityScoreAbsoluteThreshold__c.field-meta.xml
<CustomField>
    <fullName>SecurityScoreAbsoluteThreshold__c</fullName>
    <description>Minimum acceptable post-deployment security health score (0–100). If PostDeploymentScore__c falls below this value the execution is flagged as Security Risk. Default: 80.</description>
    <label>Security Score Absolute Threshold</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>