force-app/main/default/objects/SmokeTestConfig__mdt/fields/SecurityScoreRelativeThreshold__c.field-meta.xml
<CustomField>
    <fullName>SecurityScoreRelativeThreshold__c</fullName>
    <description>Maximum acceptable point drop from pre-deployment baseline to post-deployment score. If the delta exceeds this value the execution is flagged as Security Risk. Default: 5.</description>
    <label>Security Score Relative Threshold (points)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>