force-app/main/default/objects/SmokeTestConfig__mdt/fields/ShadowMode__c.field-meta.xml
<CustomField>
    <fullName>ShadowMode__c</fullName>
    <description>When true, smoke tests run after deployment but results are non-gating — they do not block the pipeline or trigger rollback actions. Use during initial rollout to build confidence without production impact. Default: false.</description>
    <label>Shadow Mode</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>