force-app/main/default/objects/SmokeTestConfig__mdt/fields/SuiteTimeoutSec__c.field-meta.xml
<CustomField>
    <fullName>SuiteTimeoutSec__c</fullName>
    <description>Maximum elapsed wall-clock time for the full smoke test suite before all remaining scenarios are aborted. Valid range: 60-600 seconds. Default: 300 seconds (5 minutes).</description>
    <label>Suite Timeout (seconds)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>